style: fix blog image spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -243,12 +243,8 @@ img.placeholder {
   @apply m-0;
 }
 
-.prose figure img {
-  @apply m-0;
-}
-
 .prose img {
-  @apply my-8 mx-auto;
+  @apply m-0;
 }
 
 .prose .callout {
@@ -300,10 +296,6 @@ img.placeholder {
 
   .post {
     @apply mx-auto px-4;
-  }
-
-  .post .asset-without-wrapper {
-    @apply block max-w-full;
   }
 
   .next-image-wrapper > * {
